[package]
name = "rust_verify_test"
version = "0.1.0"
edition = "2021"

[workspace]

[dev-dependencies]
rust_verify_test_macros = { path = "/home/milnes/projects/verus/source/rust_verify_test_macros" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
yansi = "0.5"

[package.metadata.rust-analyzer]
rustc_private = true

# Chap02 proof tests
[[test]]
name = "WSSchedulerMtEph"
path = "tests/Chap02/WSSchedulerMtEph.rs"

# Chap05 proof tests
[[test]]
name = "SetStEph"
path = "tests/Chap05/SetStEph.rs"

[[test]]
name = "SetMtEph"
path = "tests/Chap05/SetMtEph.rs"

[[test]]
name = "RelationStEph"
path = "tests/Chap05/RelationStEph.rs"

[[test]]
name = "MappingStEph"
path = "tests/Chap05/MappingStEph.rs"

[[test]]
name = "ProveRelationStEph"
path = "tests/Chap05/ProveRelationStEph.rs"

[[test]]
name = "ProveMappingStEph"
path = "tests/Chap05/ProveMappingStEph.rs"

# Chap06 iterator proof tests
[[test]]
name = "ProveDirGraphStEph"
path = "tests/Chap06/ProveDirGraphStEph.rs"

[[test]]
name = "ProveDirGraphMtEph"
path = "tests/Chap06/ProveDirGraphMtEph.rs"

[[test]]
name = "ProveUnDirGraphStEph"
path = "tests/Chap06/ProveUnDirGraphStEph.rs"

[[test]]
name = "ProveUnDirGraphMtEph"
path = "tests/Chap06/ProveUnDirGraphMtEph.rs"

[[test]]
name = "ProveLabDirGraphStEph"
path = "tests/Chap06/ProveLabDirGraphStEph.rs"

[[test]]
name = "ProveLabDirGraphMtEph"
path = "tests/Chap06/ProveLabDirGraphMtEph.rs"

[[test]]
name = "ProveLabUnDirGraphStEph"
path = "tests/Chap06/ProveLabUnDirGraphStEph.rs"

[[test]]
name = "ProveLabUnDirGraphMtEph"
path = "tests/Chap06/ProveLabUnDirGraphMtEph.rs"

[[test]]
name = "ProveWeightedDirGraphStEphU8"
path = "tests/Chap06/ProveWeightedDirGraphStEphU8.rs"

[[test]]
name = "ProveWeightedDirGraphStEphU16"
path = "tests/Chap06/ProveWeightedDirGraphStEphU16.rs"

[[test]]
name = "ProveWeightedDirGraphStEphU32"
path = "tests/Chap06/ProveWeightedDirGraphStEphU32.rs"

[[test]]
name = "ProveWeightedDirGraphStEphU64"
path = "tests/Chap06/ProveWeightedDirGraphStEphU64.rs"

[[test]]
name = "ProveWeightedDirGraphStEphU128"
path = "tests/Chap06/ProveWeightedDirGraphStEphU128.rs"

[[test]]
name = "ProveWeightedDirGraphStEphUsize"
path = "tests/Chap06/ProveWeightedDirGraphStEphUsize.rs"

[[test]]
name = "ProveWeightedDirGraphStEphI8"
path = "tests/Chap06/ProveWeightedDirGraphStEphI8.rs"

[[test]]
name = "ProveWeightedDirGraphStEphI16"
path = "tests/Chap06/ProveWeightedDirGraphStEphI16.rs"

[[test]]
name = "ProveWeightedDirGraphStEphI32"
path = "tests/Chap06/ProveWeightedDirGraphStEphI32.rs"

[[test]]
name = "ProveWeightedDirGraphStEphI64"
path = "tests/Chap06/ProveWeightedDirGraphStEphI64.rs"

[[test]]
name = "ProveWeightedDirGraphStEphI128"
path = "tests/Chap06/ProveWeightedDirGraphStEphI128.rs"

[[test]]
name = "ProveWeightedDirGraphStEphIsize"
path = "tests/Chap06/ProveWeightedDirGraphStEphIsize.rs"

# Chap17 iterator proof tests
[[test]]
name = "ProveMathSeq"
path = "tests/Chap17/ProveMathSeq.rs"

# Chap18 iterator proof tests
[[test]]
name = "ProveArraySeq"
path = "tests/Chap18/ProveArraySeq.rs"

[[test]]
name = "ProveArraySeqStEph"
path = "tests/Chap18/ProveArraySeqStEph.rs"

[[test]]
name = "ProveArraySeqStPer"
path = "tests/Chap18/ProveArraySeqStPer.rs"

[[test]]
name = "ProveArraySeqMtPer"
path = "tests/Chap18/ProveArraySeqMtPer.rs"

[[test]]
name = "ProveArraySeqMtEph"
path = "tests/Chap18/ProveArraySeqMtEph.rs"

[[test]]
name = "ProveLinkedListStEph"
path = "tests/Chap18/ProveLinkedListStEph.rs"

[[test]]
name = "ProveLinkedListStPer"
path = "tests/Chap18/ProveLinkedListStPer.rs"

# Chap19 iterator proof tests
[[test]]
name = "ProveChap19ArraySeqStEph"
path = "tests/Chap19/ProveArraySeqStEph.rs"

[[test]]
name = "ProveChap19ArraySeqStPer"
path = "tests/Chap19/ProveArraySeqStPer.rs"

[[test]]
name = "ProveChap19ArraySeqMtEph"
path = "tests/Chap19/ProveArraySeqMtEph.rs"
