[package]
name = "rust_verify_test"
version = "0.1.0"
edition = "2021"

[workspace]

[dev-dependencies]
rust_verify_test_macros = { path = "/home/milnes/projects/verus/source/rust_verify_test_macros" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
yansi = "0.5"

[package.metadata.rust-analyzer]
rustc_private = true

# Chap02 proof tests — removed: HFScheduler uses global static POOL, not testable in PTT framework.
# RTTs in test_hf_scheduler.rs cover the scheduler.

# Chap05 proof tests
[[test]]
name = "SetStEph"
path = "tests/Chap05/SetStEph.rs"

[[test]]
name = "SetMtEph"
path = "tests/Chap05/SetMtEph.rs"

[[test]]
name = "RelationStEph"
path = "tests/Chap05/RelationStEph.rs"

[[test]]
name = "MappingStEph"
path = "tests/Chap05/MappingStEph.rs"

# Chap17 iterator proof tests
[[test]]
name = "ProveMathSeq"
path = "tests/Chap17/ProveMathSeq.rs"

[[test]]
name = "prove_MathSeq_iters"
path = "tests/Chap17/prove_MathSeq_iters.rs"

# Chap18 iterator proof tests
[[test]]
name = "ProveArraySeq"
path = "tests/Chap18/ProveArraySeq.rs"

[[test]]
name = "ProveArraySeqStEph"
path = "tests/Chap18/ProveArraySeqStEph.rs"

[[test]]
name = "ProveArraySeqStPer"
path = "tests/Chap18/ProveArraySeqStPer.rs"

[[test]]
name = "ProveArraySeqMtPer"
path = "tests/Chap18/ProveArraySeqMtPer.rs"

[[test]]
name = "ProveArraySeqMtEph"
path = "tests/Chap18/ProveArraySeqMtEph.rs"

[[test]]
name = "ProveLinkedListStEph"
path = "tests/Chap18/ProveLinkedListStEph.rs"

[[test]]
name = "ProveLinkedListStPer"
path = "tests/Chap18/ProveLinkedListStPer.rs"

# Chap19 proof tests
[[test]]
name = "ProveChap19ArraySeqStEph"
path = "tests/Chap19/ProveArraySeqStEph.rs"

[[test]]
name = "ProveChap19ArraySeqStPer"
path = "tests/Chap19/ProveArraySeqStPer.rs"

[[test]]
name = "ProveChap19ArraySeqMtEph"
path = "tests/Chap19/ProveArraySeqMtEph.rs"

# Chap23 iterator proof tests
[[test]]
name = "ProveBalBinTreeStEph"
path = "tests/Chap23/ProveBalBinTreeStEph.rs"

[[test]]
name = "ProvePrimTreeSeqStPer"
path = "tests/Chap23/ProvePrimTreeSeqStPer.rs"
