[package]
name = "rust_verify_test"
version = "0.1.0"
edition = "2021"

[workspace]

[dev-dependencies]
rust_verify_test_macros = { path = "/home/milnes/projects/verus/source/rust_verify_test_macros" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
yansi = "0.5"

[package.metadata.rust-analyzer]
rustc_private = true

# Chap02 proof tests — removed: HFScheduler uses global static POOL, not testable in PTT framework.
# RTTs in test_hf_scheduler.rs cover the scheduler.

# vstdplus proof tests
[[test]]
name = "HashSetWithViewPlus"
path = "tests/vstdplus/HashSetWithViewPlus.rs"

[[test]]
name = "HashMapWithViewPlus"
path = "tests/vstdplus/HashMapWithViewPlus.rs"

# Chap05 proof tests
[[test]]
name = "SetStEph"
path = "tests/Chap05/SetStEph.rs"

[[test]]
name = "SetMtEph"
path = "tests/Chap05/SetMtEph.rs"

[[test]]
name = "RelationStEph"
path = "tests/Chap05/RelationStEph.rs"

[[test]]
name = "MappingStEph"
path = "tests/Chap05/MappingStEph.rs"

[[test]]
name = "ProveSetMtEph"
path = "tests/Chap05/ProveSetMtEph.rs"

[[test]]
name = "ProveSetStEph"
path = "tests/Chap05/ProveSetStEph.rs"

[[test]]
name = "ProveKleeneStPer"
path = "tests/Chap05/ProveKleeneStPer.rs"

# Chap17 iterator proof tests
[[test]]
name = "ProveMathSeq"
path = "tests/Chap17/ProveMathSeq.rs"

[[test]]
name = "prove_MathSeq_iters"
path = "tests/Chap17/prove_MathSeq_iters.rs"

# Chap18 iterator proof tests
[[test]]
name = "ProveArraySeq"
path = "tests/Chap18/ProveArraySeq.rs"

[[test]]
name = "ProveArraySeqStEph"
path = "tests/Chap18/ProveArraySeqStEph.rs"

[[test]]
name = "ProveArraySeqStPer"
path = "tests/Chap18/ProveArraySeqStPer.rs"

[[test]]
name = "ProveArraySeqMtPer"
path = "tests/Chap18/ProveArraySeqMtPer.rs"

[[test]]
name = "ProveArraySeqMtEph"
path = "tests/Chap18/ProveArraySeqMtEph.rs"

[[test]]
name = "ProveLinkedListStEph"
path = "tests/Chap18/ProveLinkedListStEph.rs"

[[test]]
name = "ProveLinkedListStPer"
path = "tests/Chap18/ProveLinkedListStPer.rs"

[[test]]
name = "ProveChap18ArraySeqMtEphSlice"
path = "tests/Chap18/ProveArraySeqMtEphSlice.rs"

# Chap19 proof tests
[[test]]
name = "ProveChap19ArraySeqStEph"
path = "tests/Chap19/ProveArraySeqStEph.rs"

[[test]]
name = "ProveChap19ArraySeqStPer"
path = "tests/Chap19/ProveArraySeqStPer.rs"

[[test]]
name = "ProveChap19ArraySeqMtEph"
path = "tests/Chap19/ProveArraySeqMtEph.rs"

[[test]]
name = "ProveChap19ArraySeqMtEphSlice"
path = "tests/Chap19/ProveArraySeqMtEphSlice.rs"

# Chap23 iterator proof tests
[[test]]
name = "ProveBalBinTreeStEph"
path = "tests/Chap23/ProveBalBinTreeStEph.rs"

[[test]]
name = "ProvePrimTreeSeqStPer"
path = "tests/Chap23/ProvePrimTreeSeqStPer.rs"

# Chap37 iterator proof tests
[[test]]
name = "ProveAVLTreeSeq"
path = "tests/Chap37/ProveAVLTreeSeq.rs"

[[test]]
name = "ProveAVLTreeSeqStEph"
path = "tests/Chap37/ProveAVLTreeSeqStEph.rs"

[[test]]
name = "ProveAVLTreeSeqStPer"
path = "tests/Chap37/ProveAVLTreeSeqStPer.rs"

[[test]]
name = "ProveAVLTreeSeqMtPer"
path = "tests/Chap37/ProveAVLTreeSeqMtPer.rs"

[[test]]
name = "ProveBSTSetAVLMtEph"
path = "tests/Chap37/ProveBSTSetAVLMtEph.rs"

[[test]]
name = "ProveBSTSetBBAlphaMtEph"
path = "tests/Chap37/ProveBSTSetBBAlphaMtEph.rs"

[[test]]
name = "ProveBSTSetPlainMtEph"
path = "tests/Chap37/ProveBSTSetPlainMtEph.rs"

[[test]]
name = "ProveBSTSetRBMtEph"
path = "tests/Chap37/ProveBSTSetRBMtEph.rs"

[[test]]
name = "ProveBSTSetSplayMtEph"
path = "tests/Chap37/ProveBSTSetSplayMtEph.rs"

# Chap43 iterator proof tests
[[test]]
name = "ProveOrderedSetStEph"
path = "tests/Chap43/ProveOrderedSetStEph.rs"

[[test]]
name = "ProveOrderedSetStPer"
path = "tests/Chap43/ProveOrderedSetStPer.rs"

[[test]]
name = "ProveOrderedTableStEph"
path = "tests/Chap43/ProveOrderedTableStEph.rs"

[[test]]
name = "ProveOrderedTableStPer"
path = "tests/Chap43/ProveOrderedTableStPer.rs"

[[test]]
name = "ProveOrderedTableMtEph"
path = "tests/Chap43/ProveOrderedTableMtEph.rs"

# SKIPPED: ProveAugOrderedTable{StEph,StPer,MtEph} — Verus can't verify Clone on reducer fn items

# Chap54 BFS tree iterator proof tests
[[test]]
name = "ProveBFSStEph"
path = "tests/Chap54/ProveBFSStEph.rs"

[[test]]
name = "ProveBFSMtEph"
path = "tests/Chap54/ProveBFSMtEph.rs"

# Chap38 proof tests
[[test]]
name = "ProveParamBSTStEph"
path = "tests/Chap38/ProveParamBSTStEph.rs"

# Chap39 proof tests
[[test]]
name = "ProveBSTTreapMtEph"
path = "tests/Chap39/ProveBSTTreapMtEph.rs"

# Chap41 proof tests
[[test]]
name = "ProveAVLTreeSetMtEph"
path = "tests/Chap41/ProveAVLTreeSetMtEph.rs"

[[test]]
name = "ProveAVLTreeSetStEph"
path = "tests/Chap41/ProveAVLTreeSetStEph.rs"

[[test]]
name = "ProveAVLTreeSetStPer"
path = "tests/Chap41/ProveAVLTreeSetStPer.rs"

# Standards proof tests
[[test]]
name = "Proveview_standard"
path = "tests/standards/Proveview_standard.rs"

[[test]]
name = "Provedeep_view_standard"
path = "tests/standards/Provedeep_view_standard.rs"

[[test]]
name = "Proveiterators_standard"
path = "tests/standards/Proveiterators_standard.rs"

[[test]]
name = "Provemod_standard"
path = "tests/standards/Provemod_standard.rs"

[[test]]
name = "Provetable_of_contents_standard"
path = "tests/standards/Provetable_of_contents_standard.rs"

[[test]]
name = "Proveusing_closures_standard"
path = "tests/standards/Proveusing_closures_standard.rs"

[[test]]
name = "Provewrapping_iterators_standard"
path = "tests/standards/Provewrapping_iterators_standard.rs"
